--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page!</title>
-</head>
-<body>
-
-    <h1>Home page!</h1>
-    {% for x in range(10) %}
-        {% if x % 2 == 1 %}
-        <p>{{x}}</p>
-        {% endif %}
-    {% endfor %}
-    
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %} Home page {% endblock %}
+{% block content %}
+<h1>Test</h1>
+{% endlock %}
